syntax = "proto3";

// Опции для генерации Java-классов в указанном пакете.
option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "ScheduleServiceProto";

service ScheduleService {
  rpc CheckRegistrationAvailability (RegistrationAvailabilityRequest)
      returns (RegistrationAvailabilityResponse) {}
}

message RegistrationAvailabilityRequest {
  string user_id = 1;
  string tournament_id = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  int32 current_registered = 5;
  int32 max_players = 6;
  repeated UserTournament existing_tournaments = 7;
}

message UserTournament {
  string tournament_id = 1;
  int64 start_time = 2;
  int64 end_time = 3;
}

message RegistrationAvailabilityResponse {
  bool   available = 1;      // можно ли записаться?
  string reason    = 2;      // если нельзя — почему (для пользователя)
}